# lezgi-text

./: LICENSE  README.md  pyproject.toml
notebooks/: bible-dot-com-scrapping.ipynb  quranacademy-dot-org-scrapping.ipynb
src/lezgi_text/: __init__.py  __main__.py  parsers.py  scrapers.py  utils.py
